[gd_scene load_steps=11 format=3 uid="uid://306utgcvnsbs"]

[ext_resource type="Script" uid="uid://b7cd7neuwjjdu" path="res://scenes/enemy/enemy.gd" id="1_f4q4l"]
[ext_resource type="Texture2D" uid="uid://61n5m4hwmpcc" path="res://art/tile_0108.png" id="2_djxgb"]
[ext_resource type="PackedScene" uid="uid://d6sv5u62ahn3" path="res://art/3d_models/virus_m_exp.tscn" id="3_4efjx"]
[ext_resource type="Texture2D" uid="uid://bamdqudack001" path="res://art/arrow.png" id="3_resti"]
[ext_resource type="PackedScene" uid="uid://b77sl1lvlhcwq" path="res://scenes/ui/stats_ui.tscn" id="4_ddgtl"]
[ext_resource type="PackedScene" uid="uid://xs4ihii775i1" path="res://scenes/ui/intent_ui.tscn" id="5_ebuml"]
[ext_resource type="PackedScene" uid="uid://lddt0jsn6usa" path="res://scenes/status_handler/status_handler.tscn" id="6_2wmxv"]
[ext_resource type="PackedScene" uid="uid://bb71f8mjtb5fh" path="res://scenes/modifier_handler/modifier_handler.tscn" id="7_g82ed"]
[ext_resource type="PackedScene" uid="uid://0nnepaeuhgih" path="res://scenes/modifier_handler/modifier.tscn" id="8_emql1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ylwbw"]
size = Vector2(50, 50)

[node name="Enemy" type="Area2D" groups=["enemies"]]
collision_layer = 4
script = ExtResource("1_f4q4l")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(-2.98023e-07, 1.78814e-07)
texture = ExtResource("2_djxgb")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(50, 50)
render_target_update_mode = 4

[node name="VirusMExp" parent="SubViewportContainer/SubViewport" instance=ExtResource("3_4efjx")]

[node name="Arrow" type="Sprite2D" parent="."]
visible = false
position = Vector2(31, 0)
rotation = -1.5708
texture = ExtResource("3_resti")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ylwbw")

[node name="StatsUI" parent="." instance=ExtResource("4_ddgtl")]
offset_top = 22.0
offset_bottom = 38.0

[node name="IntentUI" parent="." instance=ExtResource("5_ebuml")]
offset_top = -49.0
offset_bottom = -20.0

[node name="StatusHandler" parent="." node_paths=PackedStringArray("status_owner") instance=ExtResource("6_2wmxv")]
offset_left = -25.0
offset_top = 37.0
offset_right = -25.0
offset_bottom = 37.0
status_owner = NodePath("..")

[node name="ModifierHandler" parent="." instance=ExtResource("7_g82ed")]

[node name="DamageDealtModifier" parent="ModifierHandler" instance=ExtResource("8_emql1")]

[node name="DamageTakenModifier" parent="ModifierHandler" instance=ExtResource("8_emql1")]
type = 1

[node name="BlockGainedModifier" parent="ModifierHandler" instance=ExtResource("8_emql1")]
type = 3

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
